--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <!-- Картка 3 -->
           <div class="col">
             <div class="card">
-              <img src="img/stark.jpg" class="card-img-top" alt="Я тебе люблю!" style="width: 1024px; height: 1300px" />
+              <img src="img/stark.jpg" class="card-img-top" alt="Я тебе люблю!" style="width: 300px; height: auto" />
               <div class="card-body">
                 <h5 class="card-title">Бажаю</h5>
                 <p class="card-text">
@@ -169,4 +169,5 @@
     </script>
   </body>
 </html>
+
 
