--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               Вітаю тебе з днем народження! Ти мій найкращий!
             </p>
 
-            <button class="btn btn-primary" onclick="playMusic2()">Привітання від мене</button>
+            <button class="btn btn-primary" onclick="playMusic2()">Привітання від мене (спочатку це !)</button>
             <button class="btn btn-secondary" onclick="playMusic()">Увімкнути музику</button>
           </div>
         </div>
@@ -169,6 +169,7 @@
     </script>
   </body>
 </html>
+
 
 
 
