--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             </p>
 
             <button class="btn btn-primary" onclick="playMusic2()">Привітання від мене (спочатку це !)</button>
-            <button class="btn btn-secondary" onclick="playMusic()">Увімкнути музику</button>
+            <button class="btn btn-secondary" onclick="playMusic()" style="margin-top: 20px;">Увімкнути музику</button>
+
           </div>
         </div>
       </div>
@@ -169,6 +170,7 @@
     </script>
   </body>
 </html>
+
 
 
 
